# CardLayouter

./: .gitignore  Cargo.toml  build-deploy.sh  build.sh  index.html
.github/workflows/: deploy.yml
src/: layout.rs  lib.rs  main.rs  pdf_generation.rs
