[package]
name = "cardlayouter"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.6"
js-sys = "0.3.77"
printpdf = { version = "0.8.2", features = ["png"] }
wasm-bindgen = "0.2.100"
# Add this:
web-sys = { version = "0.3", features = [
    "console",    # lowercase
    "Window",
    "Document",
]}

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]
