[package]
name = "cardlayouter"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
image = {version="0.25.6", features=["png"],  default-features = false}
js-sys = "0.3.77"
printpdf = { version = "0.8.2", features = ["png"] , default-features = false}
wasm-bindgen = "0.2.100"
# Add this:
web-sys = { version = "0.3", features = [
    "console"    # lowercase
]}

[profile.release]
opt-level = "z"          # optimize for code size
lto = true               # link-time optimizations
codegen-units = 1        # better LTO in one pass
strip = "symbols"        # remove symbol names
panic = "abort"          # smaller panic support

[lib]
crate-type = ["cdylib"]
